# AoC

./: README.md
2022/clojure/: deps.edn
2022/clojure/main/: day1.clj  day2.clj  day3.clj  day4.clj  day5.clj  day6.clj  day7.clj  day8.clj  oldutil.clj  test.clj  util.clj
2022/elixir/: day1.exs  day2.exs
2022/haskell/: aoc2022.cabal  day1.hs  day2.hs  day3.hs
2022/haskell/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
2022/resources/: test.txt
2023/elixir/: day1.ex  day2.ex  day4.ex  day6.ex
