cabal-version:      2.4
name:               aoc2022
version:            0.1.0.0
extra-source-files: CHANGELOG.md

executable day1
    main-is:          day1.hs
    build-depends:    base ^>=4.14.3.0, split

executable day2
    main-is:          day2.hs
    build-depends:    base ^>=4.14.3.0, split

executable day3
    main-is:          day3.hs
    build-depends:    base ^>=4.14.3.0, split